# slow-query-doctor

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .slowquerydoctor.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  VERSION_MANAGEMENT.md  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-name-check.yml  commitlint.yml  general-checks.yml  lint.yml
docs/: configuration.md  examples.md  faq.md  getting-started.md  index.md  ollama-local.md  release-process.md
scripts/: propagate_version.py  test_ollama.py  update_requirements.py
slowquerydoctor/: __init__.py  antipatterns.py  llm_client.py  main.py
tests/: test_llm_client.py
